--- a/css/footer.css
+++ b/css/footer.css
@@ -14,9 +14,15 @@
     --color-main-black: #3e3e3e;
     --color-orange-main: #fe9519;
 }
+
 .footerbar{
     background-color: var(--color-main-black);
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: 160px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
 }
 .footer_txt_div{
     display: block;
