--- a/templates/layout/main.html
+++ b/templates/layout/main.html
@@ -5,9 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="../../js/base.js"></script>
     <link rel="stylesheet" href="../../css/main.css">
+
+
 </head>
 <body>
+<div nav-include-path="../../templates/layout/navbar.html">
+    <script>LoadNAVBAR();</script>
+</div>
+
+
+
     <div class="assignment_head_div">
         <div class="assignment_head_top">
             <div class="assignment_give">
@@ -44,5 +53,16 @@
         </div>
     </div>
 
+<div footer-include-path="../../templates/layout/footer.html">
+    <script>LoadFOOTER();</script>
+</div>
+
 </body>
+
+<!--<footer class="footerbar">-->
+<!--    <div footer-include-path="../../templates/layout/footer.html">-->
+<!--        <script>LoadFOOTER();</script>-->
+<!--    </div>-->
+<!--</footer>-->
+
 </html>
