--- a/templates/layout/navbar.html
+++ b/templates/layout/navbar.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="homebtn_div">
             <button class="likelionlogo_btn">
-                <img src="../../img/kau_likelion.png" alt="logo" class="kau_likelion_logo">
+                <a href="main.html"><img src="../../img/kau_likelion.png" alt="logo" class="kau_likelion_logo"></a>
                 HOME
             </button>
         </div>
