--- a/css/navbar.css
+++ b/css/navbar.css
@@ -17,6 +17,9 @@
 .navbar{
     background-color: var(--color-main-black);
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 25px;
 }
 .kau_likelion_logo{
     width: 40px;
