--- a/templates/layout/homework.html
+++ b/templates/layout/homework.html
@@ -5,9 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="../../js/base.js"></script>
     <link rel="stylesheet" href="../../css/homework.css">
 </head>
 <body>
+
+<div nav-include-path="../../templates/layout/navbar.html">
+    <script>LoadNAVBAR();</script>
+</div>
+
+
+
     <div class="assignment_title_div">
         <img src="../../img/book-btn.png" alt="book_btn" class="book_btn">
         <h3 class="assignment_title">과제 제출</h3>
@@ -54,5 +62,16 @@
 
     </div>
 
+<div footer-include-path="../../templates/layout/footer.html">
+    <script>LoadFOOTER();</script>
+</div>
+
 </body>
+
+<!--<footer class="footerbar">-->
+<!--    <div footer-include-path="../../templates/layout/footer.html">-->
+<!--        <script>LoadFOOTER();</script>-->
+<!--    </div>-->
+<!--</footer>-->
+
 </html>
