--- a/templates/layout/introduce.html
+++ b/templates/layout/introduce.html
@@ -1,10 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="../../js/base.js"></script>
+    <link rel="stylesheet" href="../../css/introduce.css">
+    <title>Introduce</title>
 </head>
+
 <body>
 
+<div nav-include-path="../../templates/layout/navbar.html">
+    <script>LoadNAVBAR();</script>
+</div>
+
+    <nav class="nav">
+        <div class="photo_kau">
+            <img src="../../img/kau.jpg" alt="logo" class="kau_logo">
+        </div>
+
+        <div class="nav_title_txt">
+            <p class="myPage_title">Yang's INTRODUCE</p>
+        </div>
+
+        <div class="photo_likelion">
+            <img src="../../img/kau_likelion.png" alt="logo" class="kau_likelion_logo">
+        </div>
+    </nav>
+
+    <div class="myPage">
+        <p class="base">안녕하세요!</p>
+        <p class="name">이름 - 강대양</p>
+        <p class="nickname">닉네임 - Yang</p>
+        <p class="major">전공 - 소프트웨어학과</p>
+        <p class="grade">학년 - 4학년</p>
+    </div>
+
+    <div class="linkPage">
+        <a href="https://github.com/yyangg2" class="clickLink">github 클릭!</a>
+    </div>
+
+<div footer-include-path="../../templates/layout/footer.html">
+    <script>LoadFOOTER();</script>
+</div>
+
 </body>
+
+<!--<footer class="footerbar">-->
+<!--    <div footer-include-path="../../templates/layout/footer.html">-->
+<!--        <script>LoadFOOTER();</script>-->
+<!--    </div>-->
+<!--</footer>-->
 </html>
